refactor(engine): Revert use List#of instead of Arrays#asList